--- a/.gitmodules
+++ b/.gitmodules
@@ -15,6 +15,10 @@
 	path = GEDI4R
 	url = https://github.com/VangiElia/GEDI4R
 	registered = false
+[submodule "Maeswrap"]
+	path = Maeswrap
+	url = https://github.com/RemkoDuursma/Maeswrap
+	registered = false
 [submodule "PEcAn.BASGRA"]
 	path = PEcAn.BASGRA
 	url = https://github.com/PecanProject/pecan
